<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_Supplier">Supplier</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_supplier">Supplier</string>
    <string name="hint_book_contact">Contact</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="detail_negative_quantity">Quantity Cannot negative.</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="rupeeSymbol">\u20B9</string>
    <string name="settings_default_quantityIncrement_value">1</string><!-- default Value -->
    <string name="settings_default_quantityIncrement_key">quantity_increment</string>
    <string name="settings_default_quantityIncrement_lable">Quantity Increment or decrement.</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="main_negative_quantity">Not enough quantity.</string>
    <string name="main_delete_all">Products Deleted.</string>
    <string name="menu_detail_edit">edit</string>
    <string name="menu_detail_delete">Delete</string>
    <string name="quantityAvailableText">Quantity : </string>
    <string name="delete_confirm_text">Are you sure want to delete?</string>
    <string name="delete_confirm_positive">Yes</string>
    <string name="delete_confirm_negative">No</string>
    <string name="menu_main_delete_data">Delete all Data.</string>

    <string name="editor_update_book_successful">Book updated</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>


    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <string name="editor_update_book_failed">Error with updating book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>


    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>


    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>

</resources>
